[package]
name = "batch-loader"
version = "0.1.0"
authors = ["Hidekazu Kobayashi <hidekazu-kobayashi@cookpad.com>"]

[dependencies]
itertools = "0.7"
futures = "0.1"
crossbeam-channel = "0.1"
error-chain = "0.11"
worker-sentinel = "0.3"
batch-recv = { version = "0.1", features = ["crossbeam"] }

[patch.crates-io]
worker-sentinel = { git = "https://github.com/KOBA789/worker-sentinel-rs" }
batch-recv = { git = "ssh://git@github.com/KOBA789/batch-recv-rs" }
